@@ -84,6 +84,8 @@
           (http://www.packetfence.org/mantis/view.php?id=473)
         removed status/rss.php
           (http://www.packetfence.org/mantis/view.php?id=479)
+        removed harvard references
+          (http://www.packetfence.org/mantis/view.php?id=478)
 
 1.7.5
         pfsetvlan should check that MAC field is filled before
